fix mailing list flex-wrap. add selection style. fix mailing list error style

--- a/src/styl/responsive/laptop.styl
+++ b/src/styl/responsive/laptop.styl
@@ -11,7 +11,6 @@ $header-height= 69px
 
 #mailing-list-holder
   .mc-field-group
-    flex-wrap: nowrap
     label
       flex: 0 1 30%
     input
