--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -26,7 +26,6 @@ $header-height= 75px
 
   .mc-field-group
     padding: $margin-small 0
-    flex-wrap: nowrap
     label,
     input
       margin-bottom: $margin-micro
